fix: atualizacao dos endpoints da aplicação
